--- a/prezzi.html
+++ b/prezzi.html
@@ -16,7 +16,7 @@
         <!-- MENU PRINCIPALE --> 
         <nav>
         <ul class="menu-ul">
-        <li  class="menu-li active"  > <a href="homeita.html" target="_self">Home</a> </li>
+       	<li  class="menu-li active"  > <a href="index.html" target="_self">Home</a> </li>
         <li  class="menu-li"> <a href="sudinoi.html" target="_self">Su di noi</a> </li>
         <li  class="menu-li"> <a href="lecamere.html" target="_self">Le stanze</a></li>
         <li  class="menu-li"> <a href="prezzi.html" target=_self>Prezzi</a></li>
