--- a/aboutus.html
+++ b/aboutus.html
@@ -32,10 +32,8 @@
 
 
 
-<h1 align="center"> Nina 7  </h1>
-<h2 align="center"> Bed&Breakfast</h2>
-<h3 align="center"> Via Antonio Rosmini,7 - Treviso</h3>
-<br>
+
+
 <br>
 
 <p> <strong> <div>Feel at home...</div></strong> </p>
@@ -66,13 +64,14 @@ Ilaria attenderà voi viaggiatori e le vostre storie, per farvi sentire come a c
 <br>
 <br>
 <br>
-Follow us on <a href="www.facebook.com"> <img src="immagini/fb.jpg" width="40"> </a>
-Share your memories <a href="www.instagram.com"> <img src="immagini/instagram.jpg" width="40"> </a>
+Follow us on <a href="www.facebook.com"> <img src="immagini/fb.png" width="40"> </a>
+Share your memories <a href="www.instagram.com"> <img src="immagini/instagram.png" width="50"> </a>
     
 </a>
 </p>
 
-
+<h3 align="center"> Via Antonio Rosmini,7 - Treviso</h3>
+<br>
 
 </body>
 </html>
