--- a/comeraggiungerci.html
+++ b/comeraggiungerci.html
@@ -32,11 +32,8 @@
 		<!-- FINE TESTATA SITO --> 
 
  
-<h1 align="center"> Nina 7  </h1>
-<h2 align="center"> Bed&Breakfast</h2>
-<h3 align="center"> Via Antonio Rosmini,7 - Treviso</h3>
-<br>
-<br>
+
+
 
 <p> <strong> <div>Sentitevi come a casa...</div></strong> </p>
 
@@ -65,13 +62,15 @@ come raggiungerci
 <br>
 <br>
 <br>
-Seguici su <a href="www.facebook.com"> <img src="immagini/fb.jpg" width="40"> </a>
-Condividi i tuoi ricordi su <a href="www.instagram.com"> <img src="immagini/instagram.jpg" width="40"> </a>
+Seguici su <a href="www.facebook.com"> <img src="immagini/fb.png" width="40"> </a>
+Condividi i tuoi ricordi su <a href="www.instagram.com"> <img src="immagini/instagram.png" width="50"> </a>
     
 </a>
 </p>
 
-
+<h3 align="center"> Via Antonio Rosmini,7 - Treviso</h3>
+<br>
+<br>
 
 </body>
 </html>
