--- a/contatti.html
+++ b/contatti.html
@@ -35,13 +35,6 @@
 
 <hr>
 
-<h1 align="center"> Nina 7  </h1>
-<h2 align="center"> Bed&Breakfast</h2>
-<h3 align="center"> Via Antonio Rosmini,7 - Treviso</h3>
-<br>
-<br>
-
-<p> <strong> <div>Sentitevi come a casa...</div></strong> </p>
 
 <br> 
 
@@ -79,13 +72,20 @@
 <br>
 <br>
 <br>
-Seguici su <a href="www.facebook.com"> <img src="immagini/fb.jpg" width="40"> </a>
-Condividi i tuoi ricordi su <a href="www.instagram.com"> <img src="immagini/instagram.jpg" width="40"> </a>
+Seguici su <a href="www.facebook.com"> <img src="immagini/fb.png" width="40"> </a>
+Condividi i tuoi ricordi su <a href="www.instagram.com"> <img src="immagini/instagram.png" width="50"> </a>
     
 </a>
 </p>
 
 
+<h1 align="center"> Nina 7  </h1>
+<h2 align="center"> Bed&Breakfast</h2>
+<h3 align="center"> Via Antonio Rosmini,7 - Treviso</h3>
+<br>
+<br>
+
+<p> <strong> <div>Sentitevi come a casa...</div></strong> </p>
 
 </body>
 </html>
