--- a/homeen.html
+++ b/homeen.html
@@ -16,7 +16,7 @@
 		<!-- MENU PRINCIPALE --> 
 		<nav>
 		<ul class="menu-ul">
-		<li  class="menu-li active"  > <a href="homeita.html" target="_self">Home</a> </li>
+		<li  class="menu-li active"  > <a href="index.html" target="_self">Home</a> </li>
 		<li  class="menu-li"> <a href="sudinoi.html" target="_self">Su di noi</a> </li>
 		<li  class="menu-li"> <a href="lecamere.html" target="_self">Le stanze</a></li>
 		<li  class="menu-li"> <a href="prezzi.html" target=_self>Prezzi</a></li>
@@ -68,8 +68,8 @@ Ilaria attenderà voi viaggiatori e le vostre storie, per farvi sentire come a c
 <br>
 <br>
 <br>
-Follow us on <a href="www.facebook.com"> <img src="immagini/fb.jpg" width="40"> </a>
-Share your memories <a href="www.instagram.com"> <img src="immagini/instagram.jpg" width="40"> </a>
+Follow us on <a href="www.facebook.com"> <img src="immagini/fb.png" width="40"> </a>
+Share your memories <a href="www.instagram.com"> <img src="immagini/instagram.png" width="50"> </a>
     
 </a>
 </p>
