--- a/prezzi.html
+++ b/prezzi.html
@@ -98,7 +98,7 @@
 <br>
 <br>
  
-Seguici su <a href="www.facebook.com"> <img src="immagini/fb.jpg" width="40"> </a>
+Seguici su <a href="www.facebook.com"> <img src="immagini/fb.png" width="40"> </a>
 Condividi i tuoi ricordi su <a href="www.instagram.com"> <img src="immagini/instagram.jpg" width="40"> </a>
 
 
