--- a/sudinoi.html
+++ b/sudinoi.html
@@ -68,8 +68,8 @@ Oggi Ilaria, tris-nipote di Nina,
 <br>
 <br>
 
-Seguici su <a href="www.facebook.com"> <img src="immagini/fb.jpg" width="40"> </a>
-Condividi i tuoi ricordi su <a href="www.instagram.com"> <img src="immagini/instagram.jpg" width="40"> </a>
+Seguici su <a href="www.facebook.com"> <img src="immagini/fb.png" width="40"> </a>
+Condividi i tuoi ricordi su <a href="www.instagram.com"> <img src="immagini/instagram.png" width="50"> </a>
     
 </a>
 </p>
