--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 		<li  class="menu-li"> <a href="prezzi.html" target=_self>Prezzi</a></li>
 		<li  class="menu-li"> <a href="comeraggiungerci.html" target="_self">Come raggiungerci</a></li>
 		<li  class="menu-li"> <a href="contatti.html" target="_self">Contatti</a></li>
+				<!-- menu sezione cambio lingua --> 
+			<li  class="menu-li"> <a href="index.html" target="_self"> <span class="language">ITA</span></a><li>
+	<li  class="menu-li"> <a href="homeen.html" target="_self"> <span class="language">ENG</span></a></li>
+	<!-- fine menu sezione cambio lingua --> 
 		</ul>
 		</nav>
 		<!-- FINE MENU PRINCIPALE --> 
@@ -31,58 +35,78 @@
 
 
 
+		
+				<!-- CONTENUTO PRINCIPALE --> 
+
+ <h1>  Nina 7  </h1>
+			
 
 
-		<p>
+	<span style="float:right">
+		
+		<img src="immagini/garden1.jpg" alt="garden" style=" margin:  5px 5px 5px 5px">
+	<br>
+		<img src="immagini/garden2.jpg" alt="bedroom1" style=" margin:  5px 5px 5px 5px">
+</span>
 
-		<a href="homeita.html" target="_self"> <span class="language">ITA</span></a>
-		<a href="homeen.html" target="_self"> <span class="language">ENG</span></a>
-
-		</p>
-
-
-
-
-		<!-- CONTENUTO PRINCIPALE PAGINA -->
-
-		<h1 align="center"> Nina 7  </h1>
-		<h2 align="center"> Bed&Breakfast</h2>
-		<h3 align="center"> Via Antonio Rosmini,7 - Treviso</h3>
-
-
-		<p> <strong> <div>Sentitevi come a casa...</div></strong> </p>
-
-
-
-		<img src="immagini/ilaria.jpg" alt="ilaria" width="200" height="300" style="float:right; margin: 0 0 10px 10px">
-		<img src="immagini/garden1.jpg" alt="garden" width="200" height="300"style="float:right; margin: 0 0 10px 10px">
-		<img src="immagini/bedroom1.jpg" alt="bedroom1" width="200" height="300" style="float:right; margin: 0 0 10px 10px">
-
-
-
-		<p>
-
-		A pochi passi dalle mura del centro storico di Treviso trovate Nina 7, un'accogliente villa del primo'900
-		immersa nel verde di un tranquillo quartiere residenziale. Nina 7 dispone di 3 stanze con bagno privato,
-		una sala per la prima colazione, una zona relax e un rigoglioso giardino arredato. 
-		Per la prima colazione, oltre al tradizionale cornetto e cappuccino, offriamo una varietà di dolci e biscotti fatti in casa, pane fresco, succhi naturali,
-		centrifughe di frutta e verdura con ingredienti Bio provenienti dalle nostre zone.
-		</p>
-
-		<p>
-		Ilaria attenderà voi viaggiatori e le vostre storie, per farvi sentire come a casa.
-		</p>    
-
-
-		<p>
-
-		Seguici su <a href="www.facebook.com"> <img src="immagini/fb.jpg" width="40"></a>
-		Condividi i tuoi ricordi su <a href="www.instagram.com"> <img src="immagini/instagram.jpg" width="40"> </a>
-		</p>
-
-		</body>
 
 		
+		<p>
+		A pochi passi dalle mura del <strong>centro storico di Treviso</strong> trovate Nina 7, un'accogliente 
+		villa del primo'900 immersa nel verde di un tranquillo quartiere residenziale.
+		</p>
+	
+
+
+		<p>
+		Nina 7 dispone di <strong>3 stanze con bagno privato, una sala per la prima colazione, una zona relax 
+		e un rigoglioso giardino arredato.</strong>
+	</p>
+	<p>
+	Per la prima colazione, oltre al tradizionale cornetto e cappuccino, offriamo 
+	una varietà di dolci e biscotti fatti in casa, pane fresco, succhi naturali, 
+	centrifughe di frutta e verdura con ingredienti Bio provenienti dalle nostre zone.
+	</p>
+		<p>
+		Ilaria attenderà voi viaggiatori e le vostre storie, per farvi sentire come a casa.
+		</p>  
+		
+
+
+
+<!-- SOCIAL --> 
+
+
+
+		<p >
+		Seguici su <a href="www.facebook.com"> <img src="immagini/fb.png" width="50px"></a><br>
+		Condividi i tuoi ricordi su <a href="www.instagram.com"> <img src="immagini/instagram.png" width="50"> </a>
+		</p>
+	
+<!--  FINE SOCIAL --> 
+		
+		<!-- FOOTER FINE FOOTER --> 
+
+	
+
+	<footer>	
+		<h2 style="text-align: center;">Nina 7</h2>
+		<h2 style="text-align: center;">Bed&amp;Breakfast</h2>
+		<h3 style="text-align: center;">Via Antonio Rosmini 7 | Treviso</h3>
+		<h3 style="text-align: center;">Come a casa vostra</h3>
+		</body>
+
+		</footer>	
+
+		<!--  FINE FOOTER --> 
+
+
+
+
+
+
+
+
 	</html>
 
 
