--- a/lecamere.html
+++ b/lecamere.html
@@ -66,8 +66,8 @@ tutte le comodità</p>
 <br>
 <br>
 <br>
-Seguici su <a href="www.facebook.com"> <img src="immagini/fb.jpg" width="40"> </a>
-Condividi i tuoi ricordi su <a href="www.instagram.com"> <img src="immagini/instagram.jpg" width="40"> </a>
+Seguici su <a href="www.facebook.com"> <img src="immagini/fb.png" width="40"> </a>
+Condividi i tuoi ricordi su <a href="www.instagram.com"> <img src="immagini/instagram.png" width="50"> </a>
     
 </a>
 </p>
