--- a/rooms.html
+++ b/rooms.html
@@ -14,7 +14,7 @@
 <br> 
 
 <p>
-<a href="homeita.html" target="_self"> <span class="language">ITA</span></a>
+<a href="index.html" target="_self"> <span class="language">ITA</span></a>
 <a href="homeen.html" target="_self"> <span class="language">ENG</span></a>
 </p>
 
@@ -24,7 +24,7 @@
         <!-- MENU PRINCIPALE --> 
         <nav>
         <ul class="menu-ul">
-        <li  class="menu-li active"  > <a href="homeita.html" target="_self">Home</a> </li>
+        <li  class="menu-li active"  > <a href="index.html" target="_self">Home</a> </li>
         <li  class="menu-li"> <a href="sudinoi.html" target="_self">Su di noi</a> </li>
         <li  class="menu-li"> <a href="lecamere.html" target="_self">Le stanze</a></li>
         <li  class="menu-li"> <a href="prezzi.html" target=_self>Prezzi</a></li>
@@ -72,8 +72,8 @@ tutte le comodità</p>
 <br>
 <br>
 <br>
-Follow us on <a href="www.facebook.com"> <img src="immagini/fb.jpg" width="40"> </a>
-Share your memories <a href="www.instagram.com"> <img src="immagini/instagram.jpg" width="40"> </a>
+Follow us on <a href="www.facebook.com"> <img src="immagini/fb.png" width="40"> </a>
+Share your memories <a href="www.instagram.com"> <img src="immagini/instagram.png" width="50"> </a>
     
 </a>
 </p>
