--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
 	<span style="float:right">
 		
-		<img src="immagini/garden1.jpg" alt="garden" style=" margin:  5px 5px 5px 5px">
+		<img src="immagini/garden1.jpg" alt="garden" style=" width:80%; margin:  5px 5px 5px 5px">
 	<br>
-		<img src="immagini/garden2.jpg" alt="bedroom1" style=" margin:  5px 5px 5px 5px">
+		<img src="immagini/garden2.jpg" alt="bedroom1" style="width:80%; margin:  5px 5px 5px 5px">
 </span>
 
 
@@ -90,10 +90,10 @@
 	
 
 	<footer>	
-		<h2 style="text-align: center;">Nina 7</h2>
-		<h2 style="text-align: center;">Bed&amp;Breakfast</h2>
-		<h3 style="text-align: center;">Via Antonio Rosmini 7 | Treviso</h3>
-		<h3 style="text-align: center;">Come a casa vostra</h3>
+		<h2 style="text-align: left;">Nina 7</h2>
+		<h2 style="text-align: left;">Bed&amp;Breakfast</h2>
+		<h3 style="text-align: left;">Via Antonio Rosmini 7 | Treviso</h3>
+		<h3 style="text-align: left; font-style: italic;">Come a casa vostra</h3>
 		</body>
 
 		</footer>	
