--- a/aboutus.html
+++ b/aboutus.html
@@ -9,18 +9,21 @@
 
 <body>
 
-
-<!-- TESTATA SITO - MENU E IMMAGINE --> 
+       <!-- TESTATA SITO - MENU E IMMAGINE --> 
 
 		<!-- MENU PRINCIPALE --> 
 		<nav>
 		<ul class="menu-ul">
-			<li  class="menu-li active"  > <a href="index.html" target="_self">Home</a> </li>
-		<li  class="menu-li"> <a href="sudinoi.html" target="_self">Su di noi</a> </li>
-		<li  class="menu-li"> <a href="lecamere.html" target="_self">Le stanze</a></li>
-		<li  class="menu-li"> <a href="prezzi.html" target=_self>Prezzi</a></li>
-		<li  class="menu-li"> <a href="comeraggiungerci.html" target="_self">Come raggiungerci</a></li>
-		<li  class="menu-li"> <a href="contatti.html" target="_self">Contatti</a></li>
+			<li  class="menu-li"  > <a href="homeen.html" target="_self">Home</a> </li>
+		<li  class="menu-li active"> <a href="aboutus.html" target="_self">About us</a> </li>
+		<li  class="menu-li"> <a href="rooms.html" target="_self">Rooms</a></li>
+		<li  class="menu-li"> <a href="prices.html" target=_self>Prices</a></li>
+		<li  class="menu-li"> <a href="howtoreachus.html" target="_self">How to reach us</a></li>
+		<li  class="menu-li"> <a href="contacts.html" target="_self">Contacts</a></li>
+				<!-- menu sezione cambio lingua --> 
+			<li  class="menu-li"> <a href="index.html" target="_self"> <span class="language">ITA</span></a><li>
+	<li  class="menu-li"> <a href="homeen.html" target="_self"> <span class="language">ENG</span></a></li>
+	<!-- fine menu sezione cambio lingua --> 
 		</ul>
 		</nav>
 		<!-- FINE MENU PRINCIPALE --> 
@@ -28,23 +31,18 @@
 		<!-- IMMAGINE DELLA TESTATA --> 
 		<img class="header-img" src="immagini/magnolia-head-1364x400.jpg">
 
-		<!-- FINE TESTATA SITO --> 
-
-
-
+		<!-- FINE TESTATA SITO -->  
 
 
 <br>
-
-<p> <strong> <div>Feel at home...</div></strong> </p>
-
 <br> 
+<br>
+<br>
 
-<br>
-<br>
 <img src="immagini/ilaria.jpg" width="300">
 <img src="immagini/garden1.jpg" width="300">
 <img src="immagini/bedroom1.jpg" width="300">
+
 <br>
 <p>
     
@@ -63,15 +61,26 @@ Ilaria attenderà voi viaggiatori e le vostre storie, per farvi sentire come a c
 <br>
 <br>
 <br>
-<br>
-Follow us on <a href="www.facebook.com"> <img src="immagini/fb.png" width="40"> </a>
-Share your memories <a href="www.instagram.com"> <img src="immagini/instagram.png" width="50"> </a>
-    
-</a>
-</p>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br><!--  SOCIAL E  FOOTER --> 
+		<br><br><footer>
+		<br>
+		
+		<h2 style="text-align: center;">Nina 7 Bed&amp;Breakfast</h2>
+		<h3 style="text-align: center;">Via Antonio Rosmini 7 | Treviso</h3>
+		<hr>
+	
+		<p class="social">
+		Seguici su <a href="www.facebook.com"> <img src="immagini/fb.png" width="30px" align="center"></a>
+		Condividi i tuoi ricordi su <a href="www.instagram.com"> <img src="immagini/instagram.png" width="30px" align="center"> </a>
+		</p>
+</footer>
 
-<h3 align="center"> Via Antonio Rosmini,7 - Treviso</h3>
-<br>
+		<!--  FINE FOOTER --> 
+
 
 </body>
 </html>
