--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 		<!-- MENU PRINCIPALE --> 
 		<nav>
 		<ul class="menu-ul">
-			<li  class="menu-li active"  > <a href="index.html" target="_self">Home</a> </li>
+		<li  class="menu-li active"  > <a href="index.html" target="_self">Home</a> </li>
 		<li  class="menu-li"> <a href="sudinoi.html" target="_self">Su di noi</a> </li>
-		<li  class="menu-li"> <a href="lecamere.html" target="_self">Le stanze</a></li>
+		<li  class="menu-li"> <a href="lecamere.html" target="_self">Le camere</a></li>
 		<li  class="menu-li"> <a href="prezzi.html" target=_self>Prezzi</a></li>
 		<li  class="menu-li"> <a href="comeraggiungerci.html" target="_self">Come raggiungerci</a></li>
 		<li  class="menu-li"> <a href="contatti.html" target="_self">Contatti</a></li>
@@ -33,21 +33,16 @@
 
 		<!-- FINE TESTATA SITO --> 
 
-
+<hr>
 
 		
 				<!-- CONTENUTO PRINCIPALE --> 
+	
 
- <h1>  Nina 7  </h1>
-			
+<br>
+<br>
 
 
-	<span style="float:right">
-		
-		<img src="immagini/garden1.jpg" alt="garden" style=" width:80%; margin:  5px 5px 5px 5px">
-	<br>
-		<img src="immagini/garden2.jpg" alt="bedroom1" style="width:80%; margin:  5px 5px 5px 5px">
-</span>
 
 
 		
@@ -55,9 +50,6 @@
 		A pochi passi dalle mura del <strong>centro storico di Treviso</strong> trovate Nina 7, un'accogliente 
 		villa del primo'900 immersa nel verde di un tranquillo quartiere residenziale.
 		</p>
-	
-
-
 		<p>
 		Nina 7 dispone di <strong>3 stanze con bagno privato, una sala per la prima colazione, una zona relax 
 		e un rigoglioso giardino arredato.</strong>
@@ -71,32 +63,44 @@
 		Ilaria attenderà voi viaggiatori e le vostre storie, per farvi sentire come a casa.
 		</p>  
 		
+<span style="float:left">
+		<img src="immagini/garden1.jpg" alt="garden" style=" width:80%; margin:  5px 5px 5px 5px">
+</span>
 
+<span style="float:right">
+		<img src="immagini/garden2.jpg" alt="bedroom1" style="width:80%; margin:  5px 5px 5px 5px">
+</span>
 
-
-<!-- SOCIAL --> 
-
-
-
-		<p >
-		Seguici su <a href="www.facebook.com"> <img src="immagini/fb.png" width="50px"></a><br>
-		Condividi i tuoi ricordi su <a href="www.instagram.com"> <img src="immagini/instagram.png" width="50"> </a>
-		</p>
-	
-<!--  FINE SOCIAL --> 
+<footer>	
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br><!--  SOCIAL E  FOOTER --> 
+		<br><br><footer>
+		<br>
 		
-		<!-- FOOTER FINE FOOTER --> 
-
+		<h2 style="text-align: center;">Nina 7 Bed&amp;Breakfast</h2>
+		<h3 style="text-align: center;">Via Antonio Rosmini 7 | Treviso</h3>
+		<hr>
 	
-
-	<footer>	
-		<h2 style="text-align: left;">Nina 7</h2>
-		<h2 style="text-align: left;">Bed&amp;Breakfast</h2>
-		<h3 style="text-align: left;">Via Antonio Rosmini 7 | Treviso</h3>
-		<h3 style="text-align: left; font-style: italic;">Come a casa vostra</h3>
-		</body>
-
-		</footer>	
+		<p class="social">
+		Seguici su <a href="www.facebook.com"> <img src="immagini/fb.png" width="30px" align="center"></a>
+		Condividi i tuoi ricordi su <a href="www.instagram.com"> <img src="immagini/instagram.png" width="30px" align="center"> </a>
+		</p>
+</footer>
 
 		<!--  FINE FOOTER --> 
 
@@ -105,7 +109,7 @@
 
 
 
-
+		</body>
 
 	</html>
 
