--- a/index.html
+++ b/index.html
@@ -2,88 +2,100 @@
 	<html>
 
 	<head>
+
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	<link type="text/css" rel="stylesheet" href="theme.css">
+
 	<title>BedandBreakfast</title>
+
 	</head>
 
 		<body>
 
+
 		<!-- TESTATA SITO - MENU E IMMAGINE --> 
 
 		<!-- MENU PRINCIPALE --> 
-		<nav>
+	
+
 		<ul class="menu-ul">
-		<li  class="menu-li active"  > <a href="homeita.html" target="_self">Home</a> </li>
+
+		<li  class="menu-li active"> <a href="index.html" target="_self">Home</a> </li>
 		<li  class="menu-li"> <a href="sudinoi.html" target="_self">Su di noi</a> </li>
-		<li  class="menu-li"> <a href="lecamere.html" target="_self">Le stanze</a></li>
+		<li  class="menu-li"> <a href="lecamere.html" target="_self">Le camere</a></li>
 		<li  class="menu-li"> <a href="prezzi.html" target=_self>Prezzi</a></li>
 		<li  class="menu-li"> <a href="comeraggiungerci.html" target="_self">Come raggiungerci</a></li>
 		<li  class="menu-li"> <a href="contatti.html" target="_self">Contatti</a></li>
+				<!-- menu sezione cambio lingua --> 
+			<li  class="menu-li"> <a href="index.html" target="_self"> ITA</a></li>
+			<li  class="menu-li"> <a href="homeen.html" target="_self"> ENG</a></li>
+				<!-- fine menu sezione cambio lingua --> 
+		
 		</ul>
-		</nav>
-		<!-- FINE MENU PRINCIPALE --> 
 
+	<!-- FINE MENU PRINCIPALE --> 
+		
 		<!-- IMMAGINE DELLA TESTATA --> 
-		<img class="header-img" src="immagini/magnolia-head-1364x400.jpg">
+		<img class="header-img" src="immagini/magnolia-head-1374.jpg">
+		
 
 		<!-- FINE TESTATA SITO --> 
 
+		   
+
+<!-- CONTENUTO PRINCIPALE--> 
+
+	
+<div id="col1">
+<p>
+A pochi passi dalle mura del centro storico di Treviso trovate Nina 7, un'accogliente villa del primo'900 immersa nel verde di un tranquillo quartiere residenziale.</p>
+<p>
+Nina 7 dispone di 3 stanze con bagno privato, una sala per la prima colazione, una zona relax e un rigoglioso giardino arredato.</p>
+<p>
+Per la prima colazione, oltre al tradizionale cornetto e cappuccino, offriamo una varietà di dolci e biscotti fatti in casa, pane fresco, succhi naturali, centrifughe di frutta e verdura con ingredienti Bio provenienti dalle nostre zone.
+Ilaria attenderà voi viaggiatori e le vostre storie, per farvi sentire come a casa.</p>
+<p>
+Per la prima colazione, oltre al tradizionale cornetto e cappuccino, offriamo 
+una varietà di dolci e biscotti fatti in casa, pane fresco, succhi naturali, 
+centrifughe di frutta e verdura con ingredienti Bio provenienti dalle nostre zone.
+Ilaria attenderà voi viaggiatori e le vostre storie, per farvi sentire come a casa.</p>
+</div id="col1">
+
+<div id="col2"><!-- seconda colonna layout --> 
+<img src="immagini/garden1.jpg" alt="garden" >
+<img src="immagini/garden2.jpg" alt="bedroom1">
+</div id="col2">
+
+<!-- FINE CONTENUTO PRINCIPALE--> 
 
 
 
-
-		<p>
-
-		<a href="homeita.html" target="_self"> <span class="language">ITA</span></a>
-		<a href="homeen.html" target="_self"> <span class="language">ENG</span></a>
-
+<footer>	
+			
+		<!--  SOCIAL E  FOOTER --> 
+		<footer>
+	
+		<hr>
+		<h2 style="text-align: center;">Nina 7 Bed&amp;Breakfast</h2>
+		<h3 style="text-align: center;">Via Antonio Rosmini 7 | Treviso</h3>
+	
+		<hr>
+		<p class="social">
+		Seguici su <a href="www.facebook.com"> <img src="immagini/fb.png" width="30px" align="center"></a>
+		Condividi i tuoi ricordi su <a href="www.instagram.com"> <img src="immagini/instagram.png" width="30px" align="center"></a>
 		</p>
+</footer>
+
+		<!--  FINE FOOTER --> 
 
 
 
 
-		<!-- CONTENUTO PRINCIPALE PAGINA -->
-
-		<h1 align="center"> Nina 7  </h1>
-		<h2 align="center"> Bed&Breakfast</h2>
-		<h3 align="center"> Via Antonio Rosmini,7 - Treviso</h3>
-
-
-		<p> <strong> <div>Sentitevi come a casa...</div></strong> </p>
-
-
-
-		<img src="immagini/ilaria.jpg" alt="ilaria" width="200" height="300" style="float:right; margin: 0 0 10px 10px">
-		<img src="immagini/garden1.jpg" alt="garden" width="200" height="300"style="float:right; margin: 0 0 10px 10px">
-		<img src="immagini/bedroom1.jpg" alt="bedroom1" width="200" height="300" style="float:right; margin: 0 0 10px 10px">
-
-
-
-		<p>
-
-		A pochi passi dalle mura del centro storico di Treviso trovate Nina 7, un'accogliente villa del primo'900
-		immersa nel verde di un tranquillo quartiere residenziale. Nina 7 dispone di 3 stanze con bagno privato,
-		una sala per la prima colazione, una zona relax e un rigoglioso giardino arredato. 
-		Per la prima colazione, oltre al tradizionale cornetto e cappuccino, offriamo una varietà di dolci e biscotti fatti in casa, pane fresco, succhi naturali,
-		centrifughe di frutta e verdura con ingredienti Bio provenienti dalle nostre zone.
-		</p>
-
-		<p>
-		Ilaria attenderà voi viaggiatori e le vostre storie, per farvi sentire come a casa.
-		</p>    
-
-
-		<p>
-
-		Seguici su <a href="www.facebook.com"> <img src="immagini/fb.jpg" width="40"></a>
-		Condividi i tuoi ricordi su <a href="www.instagram.com"> <img src="immagini/instagram.jpg" width="40"> </a>
-		</p>
 
 		</body>
 
-		
 	</html>
 
-
-
+ 
