--- a/index.html
+++ b/index.html
@@ -2,103 +2,89 @@
 	<html>
 
 	<head>
+
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	<link type="text/css" rel="stylesheet" href="theme.css">
+
 	<title>BedandBreakfast</title>
+
 	</head>
 
 		<body>
 
+
 		<!-- TESTATA SITO - MENU E IMMAGINE --> 
 
 		<!-- MENU PRINCIPALE --> 
-		<nav>
+	
+
 		<ul class="menu-ul">
-		<li  class="menu-li active"  > <a href="index.html" target="_self">Home</a> </li>
+
+		<li  class="menu-li active"> <a href="index.html" target="_self">Home</a> </li>
 		<li  class="menu-li"> <a href="sudinoi.html" target="_self">Su di noi</a> </li>
 		<li  class="menu-li"> <a href="lecamere.html" target="_self">Le camere</a></li>
 		<li  class="menu-li"> <a href="prezzi.html" target=_self>Prezzi</a></li>
 		<li  class="menu-li"> <a href="comeraggiungerci.html" target="_self">Come raggiungerci</a></li>
 		<li  class="menu-li"> <a href="contatti.html" target="_self">Contatti</a></li>
 				<!-- menu sezione cambio lingua --> 
-			<li  class="menu-li"> <a href="index.html" target="_self"> <span class="language">ITA</span></a><li>
-	<li  class="menu-li"> <a href="homeen.html" target="_self"> <span class="language">ENG</span></a></li>
-	<!-- fine menu sezione cambio lingua --> 
+			<li  class="menu-li"> <a href="index.html" target="_self"> ITA</a></li>
+			<li  class="menu-li"> <a href="homeen.html" target="_self"> ENG</a></li>
+				<!-- fine menu sezione cambio lingua --> 
+		
 		</ul>
-		</nav>
-		<!-- FINE MENU PRINCIPALE --> 
 
+	<!-- FINE MENU PRINCIPALE --> 
+		
 		<!-- IMMAGINE DELLA TESTATA --> 
-		<img class="header-img" src="immagini/magnolia-head-1364x400.jpg">
+		<img class="header-img" src="immagini/magnolia-head-1374.jpg">
+		
 
 		<!-- FINE TESTATA SITO --> 
 
-<hr>
+		   
 
-		
-				<!-- CONTENUTO PRINCIPALE --> 
+<!-- CONTENUTO PRINCIPALE--> 
+
 	
+<div id="col1">
+<p>
+A pochi passi dalle mura del centro storico di Treviso trovate Nina 7, un'accogliente villa del primo'900 immersa nel verde di un tranquillo quartiere residenziale.</p>
+<p>
+Nina 7 dispone di 3 stanze con bagno privato, una sala per la prima colazione, una zona relax e un rigoglioso giardino arredato.</p>
+<p>
+Per la prima colazione, oltre al tradizionale cornetto e cappuccino, offriamo una varietà di dolci e biscotti fatti in casa, pane fresco, succhi naturali, centrifughe di frutta e verdura con ingredienti Bio provenienti dalle nostre zone.
+Ilaria attenderà voi viaggiatori e le vostre storie, per farvi sentire come a casa.</p>
+<p>
+Per la prima colazione, oltre al tradizionale cornetto e cappuccino, offriamo 
+una varietà di dolci e biscotti fatti in casa, pane fresco, succhi naturali, 
+centrifughe di frutta e verdura con ingredienti Bio provenienti dalle nostre zone.
+Ilaria attenderà voi viaggiatori e le vostre storie, per farvi sentire come a casa.</p>
+</div id="col1">
 
-<br>
-<br>
+<div id="col2"><!-- seconda colonna layout --> 
+<img src="immagini/garden1.jpg" alt="garden" >
+<img src="immagini/garden2.jpg" alt="bedroom1">
+</div id="col2">
+
+<!-- FINE CONTENUTO PRINCIPALE--> 
 
 
-
-
-		
-		<p>
-		A pochi passi dalle mura del <strong>centro storico di Treviso</strong> trovate Nina 7, un'accogliente 
-		villa del primo'900 immersa nel verde di un tranquillo quartiere residenziale.
-		</p>
-		<p>
-		Nina 7 dispone di <strong>3 stanze con bagno privato, una sala per la prima colazione, una zona relax 
-		e un rigoglioso giardino arredato.</strong>
-	</p>
-	<p>
-	Per la prima colazione, oltre al tradizionale cornetto e cappuccino, offriamo 
-	una varietà di dolci e biscotti fatti in casa, pane fresco, succhi naturali, 
-	centrifughe di frutta e verdura con ingredienti Bio provenienti dalle nostre zone.
-	</p>
-		<p>
-		Ilaria attenderà voi viaggiatori e le vostre storie, per farvi sentire come a casa.
-		</p>  
-		
-<span style="float:left">
-		<img src="immagini/garden1.jpg" alt="garden" style=" width:80%; margin:  5px 5px 5px 5px">
-</span>
-
-<span style="float:right">
-		<img src="immagini/garden2.jpg" alt="bedroom1" style="width:80%; margin:  5px 5px 5px 5px">
-</span>
 
 <footer>	
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br><!--  SOCIAL E  FOOTER --> 
-		<br><br><footer>
-		<br>
-		
+			
+		<!--  SOCIAL E  FOOTER --> 
+		<footer>
+	
+		<hr>
 		<h2 style="text-align: center;">Nina 7 Bed&amp;Breakfast</h2>
 		<h3 style="text-align: center;">Via Antonio Rosmini 7 | Treviso</h3>
-		<hr>
 	
+		<hr>
 		<p class="social">
 		Seguici su <a href="www.facebook.com"> <img src="immagini/fb.png" width="30px" align="center"></a>
-		Condividi i tuoi ricordi su <a href="www.instagram.com"> <img src="immagini/instagram.png" width="30px" align="center"> </a>
+		Condividi i tuoi ricordi su <a href="www.instagram.com"> <img src="immagini/instagram.png" width="30px" align="center"></a>
 		</p>
 </footer>
 
@@ -108,10 +94,8 @@
 
 
 
-
 		</body>
 
 	</html>
 
-
-
+ 
