--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<!-- FINE MENU PRINCIPALE --> 
 		
 		<!-- IMMAGINE DELLA TESTATA --> 
-		<img class="header-img" src="immagini/magnolia-head-1374.jpg">
+		<img class="header-img" alt="magnolia-header" src="immagini/magnolia-head-1374.jpg">
 		
 
 		<!-- FINE TESTATA SITO --> 
@@ -61,21 +61,21 @@ Per la prima colazione, oltre al tradizionale cornetto e cappuccino, offriamo
 una varietà di dolci e biscotti fatti in casa, pane fresco, succhi naturali, 
 centrifughe di frutta e verdura con ingredienti Bio provenienti dalle nostre zone.
 Ilaria attenderà voi viaggiatori e le vostre storie, per farvi sentire come a casa.</p>
-</div id="col1">
+</div>
 
 <div id="col2"><!-- seconda colonna layout --> 
 <img src="immagini/garden1.jpg" alt="garden" >
 <img src="immagini/garden2.jpg" alt="bedroom1">
-</div id="col2">
+</div>
 
 <!-- FINE CONTENUTO PRINCIPALE--> 
 
 
 
-<footer>	
+
 			
 		<!--  SOCIAL E  FOOTER --> 
-		<footer>
+<footer>
 	
 		<hr>
 		<h2 style="text-align: center;">Nina 7 Bed&amp;Breakfast</h2>
@@ -83,19 +83,11 @@ Ilaria attenderà voi viaggiatori e le vostre storie, per farvi sentire come a c
 	
 		<hr>
 		<p class="social">
-		Seguici su <a href="www.facebook.com"> <img src="immagini/fb.png" width="30px" align="center"></a>
-		Condividi i tuoi ricordi su <a href="www.instagram.com"> <img src="immagini/instagram.png" width="30px" align="center"></a>
+		Seguici su <a href="www.facebook.com"> <img src="immagini/fb.png" width="42" alt="facebooklogo" ></a>
+		Condividi i tuoi ricordi su <a href="www.instagram.com" > <img src="immagini/instagram.png" width="42" alt="instagramlogo" ></a>
 		</p>
 </footer>
 
 		<!--  FINE FOOTER --> 
 
-
-
-
-
-		</body>
-
-	</html>
-
- 
+</body></html>
