--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@ Ilaria attenderà voi viaggiatori e le vostre storie, per farvi sentire come a c
 
 			
 		<!--  SOCIAL E  FOOTER --> 
+<div style="float:left" width="100%">
 <footer>
-	
+	<div style="float:left">
 		<hr>
 		<h2 style="text-align: center;">Nina 7 Bed&amp;Breakfast</h2>
 		<h3 style="text-align: center;">Via Antonio Rosmini 7 | Treviso</h3>
@@ -86,6 +87,7 @@ Ilaria attenderà voi viaggiatori e le vostre storie, per farvi sentire come a c
 		Seguici su <a href="www.facebook.com"> <img src="immagini/fb.png" width="42" alt="facebooklogo" ></a>
 		Condividi i tuoi ricordi su <a href="www.instagram.com" > <img src="immagini/instagram.png" width="42" alt="instagramlogo" ></a>
 		</p>
+		</div>
 </footer>
 
 		<!--  FINE FOOTER --> 
