--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 		<body>
 
-
+<div width="2560px" margin="auto">
 		<!-- TESTATA SITO - MENU E IMMAGINE --> 
 
 		<!-- MENU PRINCIPALE --> 
@@ -91,5 +91,5 @@ Ilaria attenderà voi viaggiatori e le vostre storie, per farvi sentire come a c
 </footer>
 
 		<!--  FINE FOOTER --> 
-
+</div>
 </body></html>
