--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 		<body>
 
-<div width="2560px" margin="auto">
+<div max-width="2560px" margin="auto">
 		<!-- TESTATA SITO - MENU E IMMAGINE --> 
 
 		<!-- MENU PRINCIPALE --> 
