--- a/index.html
+++ b/index.html
@@ -73,24 +73,26 @@ Ilaria attenderà voi viaggiatori e le vostre storie, per farvi sentire come a c
 
 
 
-			
-		<!--  SOCIAL E  FOOTER --> 
-<div style="float:left" width="100%">
-<footer>
-	
-		<hr>
-		<h2 style="text-align: center;">Nina 7 Bed&amp;Breakfast</h2>
-		<h3 style="text-align: center;">Via Antonio Rosmini 7 | Treviso</h3>
-	
-		<hr>
-		<p class="social">
-		Seguici su <a href="www.facebook.com"> <img src="immagini/fb.png" width="42" alt="facebooklogo" ></a>
-		Condividi i tuoi ricordi su <a href="www.instagram.com" > <img src="immagini/instagram.png" width="42" alt="instagramlogo" ></a>
-		</p>
-		</div>
-</footer>
+<!--  SOCIAL E  FOOTER --> 
 
-		<!--  FINE FOOTER --> 
+	<footer>
+
+	<hr>
+	<h2>Nina 7 Bed&amp;Breakfast</h2>
+	<h3>Via Antonio Rosmini 7 | Treviso</h3>
+	<hr>
+
+	<a href="http://www.facebook.com"> <img class="social-logo" src="immagini/fb.png" width="42"
+	alt="facebooklogo" ></a>  
+	<a href="http://www.instagram.com" > <img class="social-logo"   src="immagini/instagram.png"
+	width="44" alt="instagramlogo" ></a> 
+	</p>
+
+
+	</footer>
+
+<!--  FINE FOOTER --> 
+
 
 
 </body></html>
