--- a/lecamere.html
+++ b/lecamere.html
@@ -1,86 +1,106 @@
 <!DOCTYPE html>
-
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>BedandBreakfast</title>
-    <link type="text/css" rel="stylesheet" href="theme.css"/>
-</head>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link type="text/css" rel="stylesheet" href="theme.css">
+		<title>BedandBreakfast</title>
+	</head>
 
 <body>
 
-        <!-- TESTATA SITO - MENU E IMMAGINE --> 
+<!-- TESTATA SITO - MENU E IMMAGINE --> 
 
-		<!-- MENU PRINCIPALE --> 
-		<nav>
-		<ul class="menu-ul">
-			<li  class="menu-li"  > <a href="index.html" target="_self">Home</a> </li>
-		<li  class="menu-li"> <a href="sudinoi.html" target="_self">Su di noi</a> </li>
-		<li  class="menu-li active"> <a href="lecamere.html" target="_self">Le camere</a></li>
-		<li  class="menu-li"> <a href="prezzi.html" target=_self>Prezzi</a></li>
-		<li  class="menu-li"> <a href="comeraggiungerci.html" target="_self">Come raggiungerci</a></li>
-		<li  class="menu-li"> <a href="contatti.html" target="_self">Contatti</a></li>
-				<!-- menu sezione cambio lingua --> 
-			<li  class="menu-li"> <a href="index.html" target="_self"> <span class="language">ITA</span></a><li>
-	<li  class="menu-li"> <a href="homeen.html" target="_self"> <span class="language">ENG</span></a></li>
+	<!-- MENU PRINCIPALE --> 
+
+	<div class="container">
+	<ul class="menu-ul">
+
+	<li  class="menu-li"> <a href="index.html" target="_self">Home</a> </li>
+	<li  class="menu-li"> <a href="sudinoi.html" target="_self">Su di noi</a> </li>
+	<li  class="menu-li active"> <a href="lecamere.html" target="_self">Le camere</a></li>
+	<li  class="menu-li"> <a href="prezzi.html" target=_self>Prezzi</a></li>
+	<li  class="menu-li"> <a href="comeraggiungerci.html" target="_self">Come raggiungerci</a></li>
+	<li  class="menu-li"> <a href="contatti.html" target="_self">Contatti</a></li>
+	<!-- menu sezione cambio lingua --> 
+	<li  class="menu-li"> <a href="index.html" target="_self"> ITA</a></li>
+	<li  class="menu-li"> <a href="homeen.html" target="_self"> ENG</a></li>
 	<!-- fine menu sezione cambio lingua --> 
-		</ul>
-		</nav>
-		<!-- FINE MENU PRINCIPALE --> 
+	</ul>
+	</div>
 
-		<!-- IMMAGINE DELLA TESTATA --> 
-		<img class="header-img" src="immagini/magnolia-head-1364x400.jpg">
+	<!-- FINE MENU PRINCIPALE --> 
 
-		<!-- FINE TESTATA SITO -->
-        
-<hr>
-<br>
-<br>
+	<!-- IMMAGINE DELLA TESTATA --> 
+	<img class="header-img" alt="magnolia-header" src="immagini/magnolia-head-1374.jpg">
 
-<h3 style="text-align: center">Le nostre stanze ampie e luminose, sono arredate in stile provenzale, e sono dotate di
-tutte le comodità</h3>
 
-<br>
+<!-- FINE TESTATA SITO --> 
 
-<p>
-    <strong> MAGNOLIA </strong> - Camera doppia matrimoniale, vista giardino, bagno privato con doccia, aria condizionata, TV, wifi </p>
-			<img src="immagini/bedroom2.jpg" width="200"> <img src="immagini/bathroom1.jpg" width="200">
-	
-	<hr>
-	
-<p>
-	<strong> OLEANDRO </strong> - Camera doppia letto matrimoniale, terrazza, bagno privato con doccia, aria condizionata, TV, wifi</p>
-            <img src="immagini/bedroom1.jpg" width="200"> <img src="immagini/bathroom2.jpg" width="200">
-    
-	<hr>
-<p>
-    <strong> ORTENSIA </strong> - Camera doppia con letti sigoli,balconcino, bagno privato con doccia, aria condizionata, TV, wifi </p>	
-            <img src="immagini/bedroom3.jpg" width="200"> <img src="immagini/bathroom3.jpg" width="200">
 
-   
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br><!--  SOCIAL E  FOOTER --> 
-		<br><br><footer>
-		<br>
+
+<!-- CONTENUTO PRINCIPALE--> 
+
+
+	<div id="col-camere">
+			<h3>Le nostre stanze ampie e luminose, sono arredate in stile provenzale, e sono dotate di
+			tutte le comodità</h3>
+	</div>
+
+
+
+		<div id="col-camere">
+			<p>
+			<h2>MAGNOLIA</h2> <br>Camera doppia matrimoniale, vista giardino, bagno privato con doccia, aria condizionata, TV, wifi 
+			</p>
+		</div>
+
+		<div id="col-camere">
+			<img class="miniature" src="immagini/bedroom1.jpg"> <img class="miniature"  src="immagini/bathroom1.jpg">
+		</div>
+
+
+			<div id="col-camere">
+			<p>
+			<h2> OLEANDRO </h2> - Camera doppia letto matrimoniale, terrazza, bagno privato con doccia, aria condizionata, TV, wifi
+			</p>
+		</div>
+
+		<div id="col-camere">
+			<img class="miniature"  src="immagini/bedroom2.jpg"> <img  class="miniature"  src="immagini/bathroom1.jpg">
+		</div>
+
+
+		<div id="col-camere">
+			<p>    <h2>ORTENSIA </h2> - Camera doppia con letti sigoli,balconcino, bagno privato con doccia, aria condizionata, TV, wifi </p>	
+		</div>
+
+			<div id="col-camere">
+			<img class="miniature"    src="immagini/bedroom3.jpg"> <img  class="miniature"  src="immagini/bathroom3.jpg">
+		</div>
+
 		
-		<h2 style="text-align: center;">Nina 7 Bed&amp;Breakfast</h2>
-		<h3 style="text-align: center;">Via Antonio Rosmini 7 | Treviso</h3>
-		<hr>
-	
-		<p class="social">
-		Seguici su <a href="www.facebook.com"> <img src="immagini/fb.png" width="30px" align="center"></a>
-		Condividi i tuoi ricordi su <a href="www.instagram.com"> <img src="immagini/instagram.png" width="30px" align="center"> </a>
-		</p>
-</footer>
-
-		<!--  FINE FOOTER --> 
 
 
+<!--  SOCIAL E  FOOTER --> 
+
+	<footer>
+
+	<hr>
+	<h2>Nina 7 Bed&amp;Breakfast</h2>
+	<h3>Via Antonio Rosmini 7 | Treviso</h3>
+	<hr>
+
+	<a href="http://www.facebook.com"> <img class="social-logo" src="immagini/fb.png" width="42"
+	alt="facebooklogo" ></a>  
+	<a href="http://www.instagram.com" > <img class="social-logo"   src="immagini/instagram.png"
+	width="44" alt="instagramlogo" ></a> 
+	</p>
+
+
+	</footer>
+
+<!--  FINE FOOTER --> 
 
 
 </body>
