--- a/prezzi.html
+++ b/prezzi.html
@@ -1,35 +1,45 @@
 <!DOCTYPE html>
+	<html>
 
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>BedandBreakfast</title>
-    <link type="text/css" rel="stylesheet" href="theme.css"/>
-</head>
+	<head>
 
-<body>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- TESTATA SITO - MENU E IMMAGINE --> 
+	<link type="text/css" rel="stylesheet" href="theme.css">
+
+	<title>BedandBreakfast</title>
+
+	</head>
+
+		<body>
+
+
+		<!-- TESTATA SITO - MENU E IMMAGINE --> 
 
 		<!-- MENU PRINCIPALE --> 
-		<nav>
+	
+<div class="container">
 		<ul class="menu-ul">
-			<li  class="menu-li"  > <a href="index.html" target="_self">Home</a> </li>
+
+		<li  class="menu-li"> <a href="index.html" target="_self">Home</a> </li>
 		<li  class="menu-li"> <a href="sudinoi.html" target="_self">Su di noi</a> </li>
 		<li  class="menu-li"> <a href="lecamere.html" target="_self">Le camere</a></li>
 		<li  class="menu-li active"> <a href="prezzi.html" target=_self>Prezzi</a></li>
 		<li  class="menu-li"> <a href="comeraggiungerci.html" target="_self">Come raggiungerci</a></li>
 		<li  class="menu-li"> <a href="contatti.html" target="_self">Contatti</a></li>
 				<!-- menu sezione cambio lingua --> 
-			<li  class="menu-li"> <a href="index.html" target="_self"> <span class="language">ITA</span></a><li>
-	<li  class="menu-li"> <a href="homeen.html" target="_self"> <span class="language">ENG</span></a></li>
-	<!-- fine menu sezione cambio lingua --> 
+			<li  class="menu-li"> <a href="index.html" target="_self"> ITA</a></li>
+			<li  class="menu-li"> <a href="homeen.html" target="_self"> ENG</a></li>
+				<!-- fine menu sezione cambio lingua --> 
+		
 		</ul>
-		</nav>
-		<!-- FINE MENU PRINCIPALE --> 
-
+</div>
+	<!-- FINE MENU PRINCIPALE --> 
+		
 		<!-- IMMAGINE DELLA TESTATA --> 
-		<img class="header-img" src="immagini/magnolia-head-1364x400.jpg">
+		<img class="header-img" alt="magnolia-header" src="immagini/magnolia-head-1374.jpg">
+		
 
 		<!-- FINE TESTATA SITO --> 
 
@@ -79,46 +89,35 @@
     
 </table>
 
-<br>
-<br>
-<br>
-<br>
+	<div id="col-camere">
 
 <p>Si accettano pagamenti in contanti e tramite bancomat e carta di credito</p>
-
-    <img src="immagini/visa.png" alt="visa" width=200 height=150>
-    <img src="immagini/american-express.jpg" alt="ae"1 width=200 height=150>
-    <img src="immagini/mastercard.jpg"alt="mastercard" width=200 height=150>
-    
-
-<br>
-<br>
-<br>
-<br>
-<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br><!--  SOCIAL E  FOOTER --> 
-		<br>
-		<br><br><footer>
-		
-		<h2 style="text-align: center;">Nina 7 Bed&amp;Breakfast</h2>
-		<h3 style="text-align: center;">Via Antonio Rosmini 7 | Treviso</h3>
-		<hr>
+<p>
+    <img src="immagini/visa.png" alt="visa" >
+    <img src="immagini/american-express.jpg" alt="ae">
+    <img src="immagini/mastercard.jpg" alt="mastercard" >
+   </p> 
 	
-		<p class="social">
-		Seguici su <a href="www.facebook.com"> <img src="immagini/fb.png" width="30px" align="center"></a>
-		Condividi i tuoi ricordi su <a href="www.instagram.com"> <img src="immagini/instagram.png" width="30px" align="center"> </a>
-		</p>
-</footer>
+	</div>
+<!--  SOCIAL E  FOOTER --> 
 
-		<!--  FINE FOOTER --> 
+	<footer>
+
+	<hr>
+	<h2>Nina 7 Bed&amp;Breakfast</h2>
+	<h3>Via Antonio Rosmini 7 | Treviso</h3>
+	<hr>
+
+	<a href="http://www.facebook.com"> <img class="social-logo" src="immagini/fb.png" width="42"
+	alt="facebooklogo" ></a>  
+	<a href="http://www.instagram.com" > <img class="social-logo"   src="immagini/instagram.png"
+	width="44" alt="instagramlogo" ></a> 
+	</p>
 
 
+	</footer>
+
+<!--  FINE FOOTER --> 
 
 
-
-</body>
-</html>
+</body></html>
