--- a/contatti.html
+++ b/contatti.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-	<html>
+<html>
 
-	<head>
+<head>
 
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,97 +10,91 @@
 
 	<title>BedandBreakfast</title>
 
-	</head>
+</head>
 
-		<body>
+<body>
 
 
-		<!-- TESTATA SITO - MENU E IMMAGINE --> 
+	<!-- TESTATA SITO - MENU E IMMAGINE --> 
 
-		<!-- MENU PRINCIPALE --> 
-	
-<div class="container">
-		<ul class="menu-ul">
+			<!-- MENU PRINCIPALE --> 
 
-		<li  class="menu-li"> <a href="index.html" target="_self">Home</a> </li>
-		<li  class="menu-li"> <a href="sudinoi.html" target="_self">Su di noi</a> </li>
-		<li  class="menu-li"> <a href="lecamere.html" target="_self">Le camere</a></li>
-		<li  class="menu-li"> <a href="prezzi.html" target=_self>Prezzi</a></li>
-		<li  class="menu-li"> <a href="comeraggiungerci.html" target="_self">Come raggiungerci</a></li>
-		<li  class="menu-li active"> <a href="contatti.html" target="_self">Contatti</a></li>
-				<!-- menu sezione cambio lingua --> 
+			<div class="container">
+			<ul class="menu-ul">
+
+			<li  class="menu-li"> <a href="index.html" target="_self">Home</a> </li>
+			<li  class="menu-li"> <a href="sudinoi.html" target="_self">Su di noi</a> </li>
+			<li  class="menu-li"> <a href="lecamere.html" target="_self">Le camere</a></li>
+			<li  class="menu-li"> <a href="prezzi.html" target=_self>Prezzi</a></li>
+			<li  class="menu-li"> <a href="comeraggiungerci.html" target="_self">Come raggiungerci</a></li>
+			<li  class="menu-li active"> <a href="contatti.html" target="_self">Contatti</a></li>
+			<!-- menu sezione cambio lingua --> 
 			<li  class="menu-li"> <a href="index.html" target="_self"> ITA</a></li>
 			<li  class="menu-li"> <a href="homeen.html" target="_self"> ENG</a></li>
-				<!-- fine menu sezione cambio lingua --> 
+			<!-- fine menu sezione cambio lingua --> 
+
+			</ul>
+			</div>
+			<!-- FINE MENU PRINCIPALE --> 
+
+			<!-- IMMAGINE DELLA TESTATA --> 
+			<img class="header-img" alt="magnolia-header" src="immagini/magnolia-head-1374.jpg">
+
+
+	<!-- FINE TESTATA SITO --> 
+
+	<!-- FORM CONTATTI --> 
 		
-		</ul>
-</div>
-	<!-- FINE MENU PRINCIPALE --> 
-		
-		<!-- IMMAGINE DELLA TESTATA --> 
-		<img class="header-img" alt="magnolia-header" src="immagini/magnolia-head-1374.jpg">
-		
+		<div id="col1">
 
-		<!-- FINE TESTATA SITO --> 
-
-<br> 
-<br>
-<br>
-<br>
-<p>
-    
-<form name="Name" action="" method="POST" enctype="application/x-www-form-urlencoded">
-    Nome <input type="text" name="name" value="" size="40" maxlength="40"  min="" max="" accept=""/>
-    Cognome <input type="text" name="surname" value="" size="40" maxlength="40"  min="" max="" accept=""/> <br>
-	<img src="immagini/ilaria.jpg" alt="ilaria" width="250" style="float:right">
-    <br>
-	<br>
-    Indirizzo email <input type="text" name="email" value="" size="40" maxlength="40"  min="" max="" accept=""/> <br>
-    <br>
-	<br>
-    Seleziona una stanza <select name="Room type">
-        <option> MAGNOLIA </option>
-        <option> OLEANDRO </option>
-        <option> ORTENSIA </option>
-    </select>
-    <br>
-	<br>
-    Commenti <br><textarea name="comments" cols="40" rows="10" wrap="SOFT"></textarea>
-    <input type="submit"/><input type="reset"/></form>
-</p>    
-    
-<br>
-<br>
-<br>
-
-<img src="immagini/garden1.jpg" alt="garden" width=300 style="float:left">
-<img src="immagini/bedroom1.jpg" alt=bedroom1" width=300 style="float:right"
-
-
-
-		<br>
-		<br>
-
+			<form name="Name" action="" method="POST" enctype="application/x-www-form-urlencoded">
+			<br>
+			Nome <input type="text" name="name" value="" size="40" maxlength="40"  min="" max="" accept=""/>
+			<br><br>
+			Cognome <input type="text" name="surname" value="" size="40" maxlength="40"  min="" max="" accept=""/>
+			<br><br>
+			Indirizzo email <input type="text" name="email" value="" size="40" maxlength="40"  min="" max="" accept=""/>
+			<br><br>
 			
-<!--  SOCIAL E  FOOTER --> 
+			Seleziona una stanza
+			<select name="Room type">
+			<option> MAGNOLIA </option>
+			<option> OLEANDRO </option>
+			<option> ORTENSIA </option>
+			</select>
+			<br><br>
 
-	<footer>
-
-	<hr>
-	<h2>Nina 7 Bed&amp;Breakfast</h2>
-	<h3>Via Antonio Rosmini 7 | Treviso</h3>
-	<hr>
-
-	<a href="http://www.facebook.com"> <img class="social-logo" src="immagini/fb.png" width="42"
-	alt="facebooklogo" ></a>  
-	<a href="http://www.instagram.com" > <img class="social-logo"   src="immagini/instagram.png"
-	width="44" alt="instagramlogo" ></a> 
-	</p>
+			Commenti<br><textarea name="comments" cols="70" rows="15" wrap="SOFT"></textarea>
+			<br>
+			<input type="submit"/><input type="reset"/></form>
+		</div>
 
 
-	</footer>
+		<div id="col2"> 
+		<img src="immagini/ilaria.jpg" alt="ilaria" style="width:300px; float:right">
+		</div>
+		
 
-<!--  FINE FOOTER --> 
+
+	<!--  SOCIAL E  FOOTER --> 
+
+		<footer>
+
+		<hr>
+		<h2>Nina 7 Bed&amp;Breakfast</h2>
+		<h3>Via Antonio Rosmini 7 | Treviso</h3>
+		<hr>
+
+		<a href="http://www.facebook.com"> <img class="social-logo" src="immagini/fb.png" width="42"
+		alt="facebooklogo" ></a>  
+		<a href="http://www.instagram.com" > <img class="social-logo"   src="immagini/instagram.png"
+		width="44" alt="instagramlogo" ></a> 
+		</p>
+
+
+		</footer>
+
+	<!--  FINE FOOTER --> 
 
 
 
