--- a/aboutus.html
+++ b/aboutus.html
@@ -1,86 +1,102 @@
 <!DOCTYPE html>
-
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>BedandBreakfast</title>
-    <link type="text/css" rel="stylesheet" href="theme.css"/>
-</head>
+
+	<head>
+
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+		<link type="text/css" rel="stylesheet" href="theme.css">
+
+		<title>BedandBreakfast</title>
+
+	</head>
 
 <body>
 
-       <!-- TESTATA SITO - MENU E IMMAGINE --> 
+
+	<!-- TESTATA SITO - MENU E IMMAGINE --> 
 
 		<!-- MENU PRINCIPALE --> 
-		<nav>
+
+		<div class="container">
 		<ul class="menu-ul">
-			<li  class="menu-li"  > <a href="homeen.html" target="_self">Home</a> </li>
-		<li  class="menu-li active"> <a href="aboutus.html" target="_self">About us</a> </li>
-		<li  class="menu-li"> <a href="rooms.html" target="_self">Rooms</a></li>
-		<li  class="menu-li"> <a href="prices.html" target=_self>Prices</a></li>
-		<li  class="menu-li"> <a href="howtoreachus.html" target="_self">How to reach us</a></li>
-		<li  class="menu-li"> <a href="contacts.html" target="_self">Contacts</a></li>
-				<!-- menu sezione cambio lingua --> 
-			<li  class="menu-li"> <a href="index.html" target="_self"> <span class="language">ITA</span></a><li>
-	<li  class="menu-li"> <a href="homeen.html" target="_self"> <span class="language">ENG</span></a></li>
-	<!-- fine menu sezione cambio lingua --> 
+
+		<li  class="menu-li"> <a href="index.html" target="_self">Home</a> </li>
+		<li  class="menu-li active"> <a href="sudinoi.html" target="_self">Su di noi</a> </li>
+		<li  class="menu-li"> <a href="lecamere.html" target="_self">Le camere</a></li>
+		<li  class="menu-li"> <a href="prezzi.html" target=_self>Prezzi</a></li>
+		<li  class="menu-li"> <a href="comeraggiungerci.html" target="_self">Come raggiungerci</a></li>
+		<li  class="menu-li"> <a href="contatti.html" target="_self">Contatti</a></li>
+		<!-- menu sezione cambio lingua --> 
+		<li  class="menu-li"> <a href="index.html" target="_self"> ITA</a></li>
+		<li  class="menu-li"> <a href="homeen.html" target="_self"> ENG</a></li>
+		<!-- fine menu sezione cambio lingua --> 
+
 		</ul>
-		</nav>
+		</div>
 		<!-- FINE MENU PRINCIPALE --> 
 
 		<!-- IMMAGINE DELLA TESTATA --> 
-		<img class="header-img" src="immagini/magnolia-head-1364x400.jpg">
-
-		<!-- FINE TESTATA SITO -->  
+		<img class="header-img" alt="magnolia-header" src="immagini/magnolia-head-1374.jpg">
 
 
-<br>
-<br> 
-<br>
-<br>
+	<!-- FINE TESTATA SITO --> 
 
-<img src="immagini/ilaria.jpg" width="300">
-<img src="immagini/garden1.jpg" width="300">
-<img src="immagini/bedroom1.jpg" width="300">
-
-<br>
-<p>
-    
-A pochi passi dalle mura del centro storico di Treviso trovate Nina 7, un'accogliente villa del primo'900
-immersa nel verde di un tranquillo quartiere residenziale. Nina 7 dispone di 3 stanze con bagno privato,
-una sala per la prima colazione, una zona relax e un rigoglioso giardino arredato. 
-Per la prima colazione, oltre al tradizionale cornetto e cappuccino, offriamo una varietà di dolci e biscotti fatti in casa, pane fresco, succhi naturali,
-centrifughe di frutta e verdura con ingredienti Bio provenienti dalle nostre zone.
+	<!-- CONTENUTO PRINCIPALE--> 
 
 
-Ilaria attenderà voi viaggiatori e le vostre storie, per farvi sentire come a casa.
-
-</p>    
-    
-
-<br>
-<br>
-<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br><!--  SOCIAL E  FOOTER --> 
-		<br><br><footer>
-		<br>
-		
-		<h2 style="text-align: center;">Nina 7 Bed&amp;Breakfast</h2>
-		<h3 style="text-align: center;">Via Antonio Rosmini 7 | Treviso</h3>
-		<hr>
+	<div id="col1">
 	
-		<p class="social">
-		Seguici su <a href="www.facebook.com"> <img src="immagini/fb.png" width="30px" align="center"></a>
-		Condividi i tuoi ricordi su <a href="www.instagram.com"> <img src="immagini/instagram.png" width="30px" align="center"> </a>
+		<p>
+		Questa casa è da sempre appartenuta alla nostra famiglia e zia Nina vi ha vissuto per quasi 100 anni, la 
+		magnolia che cresce alta e robusta di fronte alla casa è stata piantata quando lei era ancora piccola e mantiene
+		vivo il suo ricordo.
 		</p>
-</footer>
+		<p>Zia Nina, qui al numero 7, ha sempre ricevuto amici e forestieri con il piacere dell'accoglienza e della condivisione.</p>
+		<p>
+		Oggi è <strong>Ilaria</strong>, tris-nipote di Nina, a darvi benvenuto in questo rinnovato ambiente
+		perché il vostro passaggio possa continuare ad animare le antiche stanze con nuove storie, come ci ha insegnato a fare Nina.
+		</p>    
 
-		<!--  FINE FOOTER --> 
+	</div>
+
+	<br>
+	<br>
+
+	<div id="col2">
+		<img src="immagini/ilaria.jpg" alt="ilaria">
+
+		<img src="immagini/garden1.jpg" alt="garden">
+
+	</div>	
+
+
+
+
+<!--  SOCIAL E  FOOTER --> 
+
+	<footer>
+
+	<hr>
+	<h2>Nina 7 Bed&amp;Breakfast</h2>
+	<h3>Via Antonio Rosmini 7 | Treviso</h3>
+	<hr>
+
+	<a href="http://www.facebook.com"> <img class="social-logo" src="immagini/fb.png" width="42"
+	alt="facebooklogo" ></a>  
+	<a href="http://www.instagram.com" > <img class="social-logo"   src="immagini/instagram.png"
+	width="44" alt="instagramlogo" ></a> 
+	</p>
+
+
+	</footer>
+
+<!--  FINE FOOTER --> 
+
+
 
 
 </body>
+
 </html>
