--- a/howtoreachus.html
+++ b/howtoreachus.html
@@ -1,99 +1,108 @@
 <!DOCTYPE html>
+	<html>
 
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>BedandBreakfast</title>
-    <link type="text/css" rel="stylesheet" href="theme.css"/>
-</head>
+	<head>
 
-<body>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- TESTATA SITO - MENU E IMMAGINE --> 
+	<link type="text/css" rel="stylesheet" href="theme.css">
+
+	<title>BedandBreakfast</title>
+
+	</head>
+
+		<body>
+
+
+		<!-- TESTATA SITO - MENU E IMMAGINE --> 
 
 		<!-- MENU PRINCIPALE --> 
-		<nav>
+	
+<div class="container">
 		<ul class="menu-ul">
-			<li  class="menu-li"  > <a href="homeen.html" target="_self">Home</a> </li>
+
+		<li  class="menu-li"> <a href="homeen.html" target="_self">Home</a> </li>
 		<li  class="menu-li"> <a href="aboutus.html" target="_self">About us</a> </li>
 		<li  class="menu-li"> <a href="rooms.html" target="_self">Rooms</a></li>
 		<li  class="menu-li"> <a href="prices.html" target=_self>Prices</a></li>
 		<li  class="menu-li active"> <a href="howtoreachus.html" target="_self">How to reach us</a></li>
 		<li  class="menu-li"> <a href="contacts.html" target="_self">Contacts</a></li>
 				<!-- menu sezione cambio lingua --> 
-			<li  class="menu-li"> <a href="index.html" target="_self"> <span class="language">ITA</span></a><li>
-	<li  class="menu-li"> <a href="homeen.html" target="_self"> <span class="language">ENG</span></a></li>
-	<!-- fine menu sezione cambio lingua --> 
+			<li  class="menu-li"> <a href="index.html" target="_self"> ITA</a></li>
+			<li  class="menu-li"> <a href="homeen.html" target="_self"> ENG</a></li>
+				<!-- fine menu sezione cambio lingua --> 
+		
 		</ul>
-		</nav>
-		<!-- FINE MENU PRINCIPALE --> 
-
+</div>
+	<!-- FINE MENU PRINCIPALE --> 
+		
 		<!-- IMMAGINE DELLA TESTATA --> 
-		<img class="header-img" src="immagini/magnolia-head-1364x400.jpg">
+		<img class="header-img" alt="magnolia-header" src="immagini/magnolia-head-1374.jpg">
+		
 
 		<!-- FINE TESTATA SITO --> 
- 
 
-
-
-<br>
-<h1 align="center"> Nina 7  </h1>
-<h2 align="center"> Bed&Breakfast</h2>
-<h3 align="center"> Via Antonio Rosmini,7 - Treviso</h3>
+<hr>
 <br>
 <br>
 
-<p> <strong> <div>Feel at home...</div></strong> </p>
 
-<br>
-<br>
-<img src="immagini/ilaria.jpg" width="300">
-<img src="immagini/garden1.jpg" width="300">
-<img src="immagini/bedroom1.jpg" width="300">
-<br>
+<!-- inserire mappa --> 
+
 <p>
-    
-A pochi passi dalle mura del centro storico di Treviso trovate Nina 7, un'accogliente villa del primo'900
-immersa nel verde di un tranquillo quartiere residenziale. Nina 7 dispone di 3 stanze con bagno privato,
-una sala per la prima colazione, una zona relax e un rigoglioso giardino arredato. 
-Per la prima colazione, oltre al tradizionale cornetto e cappuccino, offriamo una varietà di dolci e biscotti fatti in casa, pane fresco, succhi naturali,
-centrifughe di frutta e verdura con ingredienti Bio provenienti dalle nostre zone.
+<strong>By car</strong>
+Motorway A27 Mestre-Belluno, connected to A4 Torino-Trieste, take exit Treviso Sud.
+Drive direction Castelfranco/Vicenza, at the roundabout, take the first exit on the right, direction Centro.
+Drive all the external town detour and turn right into Viale Luzzatti. After 100 meters, turn right into via Carrer and right again into Via d'Azeglio.
+At the end of via d'Azeglio, turn right into Via Rosmini.
+
+Free private car park.
+</p>
+
+<p>
+<strong>By Train</strong>
+Stop at Treviso Centrale Station. Free transfer upon request.
+</p>
+
+<p>
+<strong>By Plane</strong>
+You can land at Treviso Canova airport or Venice Marco Polo.
+Free transfer upon request.
+</p>
 
 
-Ilaria attenderà voi viaggiatori e le vostre storie, per farvi sentire come a casa.
 
-</p>    
-    
-
-<br>
-<br>
-<br>
-
-
-
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2787.9633043474164!2d12.239563115564449!3d45.67163697910404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477937d6c81a02d3%3A0xd98bd0f7ab54f7d!2sVia+Antonio+Rosmini%2C+31100+Treviso+TV!5e0!3m2!1sit!2sit!4v1470922069806" width="700" height="550" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 
 		<br>
 		<br>
 		<br>
-		<br>
-		<br><!--  SOCIAL E  FOOTER --> 
-		<br>
-		<br><br><footer>
-		
-		<h2 style="text-align: center;">Nina 7 Bed&amp;Breakfast</h2>
-		<h3 style="text-align: center;">Via Antonio Rosmini 7 | Treviso</h3>
-		<hr>
-	
-		<p class="social">
-		Seguici su <a href="www.facebook.com"> <img src="immagini/fb.png" width="30px" align="center"></a>
-		Condividi i tuoi ricordi su <a href="www.instagram.com"> <img src="immagini/instagram.png" width="30px" align="center"> </a>
-		</p>
-<br></footer>
-
-		<!--  FINE FOOTER --> 
+			
+		<!--  SOCIAL E  FOOTER --> 
 
 
+<!--  SOCIAL E  FOOTER --> 
 
-</body>
-</html>
+	<footer>
+
+	<hr>
+	<h2>Nina 7 Bed&amp;Breakfast</h2>
+	<h3>Via Antonio Rosmini 7 | Treviso</h3>
+	<hr>
+
+	<a href="http://www.facebook.com"> <img class="social-logo" src="immagini/fb.png" width="42"
+	alt="facebooklogo" ></a>  
+	<a href="http://www.instagram.com" > <img class="social-logo"   src="immagini/instagram.png"
+	width="44" alt="instagramlogo" ></a> 
+	</p>
+
+
+	</footer>
+
+<!--  FINE FOOTER --> 
+
+
+
+</body></html>
