--- a/rooms.html
+++ b/rooms.html
@@ -1,96 +1,106 @@
 <!DOCTYPE html>
-
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>BedandBreakfast</title>
-    <link type="text/css" rel="stylesheet" href="theme.css"/>
-</head>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link type="text/css" rel="stylesheet" href="theme.css">
+		<title>BedandBreakfast</title>
+	</head>
 
 <body>
 
 <!-- TESTATA SITO - MENU E IMMAGINE --> 
 
-		<!-- MENU PRINCIPALE --> 
-		<nav>
-		<ul class="menu-ul">
-			<li  class="menu-li"  > <a href="homeen.html" target="_self">Home</a> </li>
+	<!-- MENU PRINCIPALE --> 
+
+	<div class="container">
+	<ul class="menu-ul">
+
+	<li  class="menu-li"> <a href="homeen.html" target="_self">Home</a> </li>
 		<li  class="menu-li"> <a href="aboutus.html" target="_self">About us</a> </li>
 		<li  class="menu-li active"> <a href="rooms.html" target="_self">Rooms</a></li>
 		<li  class="menu-li"> <a href="prices.html" target=_self>Prices</a></li>
 		<li  class="menu-li"> <a href="howtoreachus.html" target="_self">How to reach us</a></li>
 		<li  class="menu-li"> <a href="contacts.html" target="_self">Contacts</a></li>
-				<!-- menu sezione cambio lingua --> 
-			<li  class="menu-li"> <a href="index.html" target="_self"> <span class="language">ITA</span></a><li>
-	<li  class="menu-li"> <a href="homeen.html" target="_self"> <span class="language">ENG</span></a></li>
+	<!-- menu sezione cambio lingua --> 
+	<li  class="menu-li"> <a href="index.html" target="_self"> ITA</a></li>
+	<li  class="menu-li"> <a href="homeen.html" target="_self"> ENG</a></li>
 	<!-- fine menu sezione cambio lingua --> 
-		</ul>
-		</nav>
-		<!-- FINE MENU PRINCIPALE --> 
+	</ul>
+	</div>
 
-		<!-- IMMAGINE DELLA TESTATA --> 
-		<img class="header-img" src="immagini/magnolia-head-1364x400.jpg">
+	<!-- FINE MENU PRINCIPALE --> 
 
-		<!-- FINE TESTATA SITO --> 
-
-<br> 
+	<!-- IMMAGINE DELLA TESTATA --> 
+	<img class="header-img" alt="magnolia-header" src="immagini/magnolia-head-1374.jpg">
 
 
+<!-- FINE TESTATA SITO --> 
 
 
-<br>
 
-<h1 align="center"> Nina 7  </h1>
-<h2 align="center"> Bed&Breakfast</h2>
-<h3 align="center"> Via Antonio Rosmini,7 - Treviso</h3>
-<br>
-<br>
-
-<p> <strong> <div>Feel at home...</div></strong> </p>
-<p>Le nostre stanze ampie e luminose, sono tutte arredate in stile provenzale, e sono dotate di
-tutte le comodità</p>
+<!-- CONTENUTO PRINCIPALE--> 
 
 
-<p>
-    Camera doppia 1 - vista giardino, matrimoniale, bagno privato con doccia, aria condizionata, TV, wifi
-    <br><img src="immagini/bedroom2.jpg" width="400"> <img src="immagini/bathroom1.jpg" width="300">
-    <br><br><br>
-    Camera doppia 2 - terrazza, bagno privato con doccia, aria condizionata, TV, wifi
-    <br><img src="immagini/bedroom1.jpg" width="300"> <img src="immagini/bathroom2.jpg" width="300">
-    <br><br><br>
-    Camera doppia 3 - con balconcino, letti singoli, bagno privato con doccia, aria condizionata, TV, wifi
-    <br><img src="immagini/bedroom3.jpg" width="300"> <img src="immagini/bathroom3.jpg" width="300">
+	<div id="col-camere">
+			<h3>Le nostre stanze ampie e luminose, sono arredate in stile provenzale, e sono dotate di
+			tutte le comodità</h3>
+	</div>
 
-</p>
 
-    
-    
 
-<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br><!--  SOCIAL E  FOOTER --> 
-		<br><br><footer>
-		<br>
+		<div id="col-camere">
+			<p>
+			<h2>MAGNOLIA</h2> <br>Camera doppia matrimoniale, vista giardino, bagno privato con doccia, aria condizionata, TV, wifi 
+			</p>
+		</div>
+
+		<div id="col-camere">
+			<img class="miniature" src="immagini/bedroom1.jpg"> <img class="miniature"  src="immagini/bathroom1.jpg">
+		</div>
+
+
+			<div id="col-camere">
+			<p>
+			<h2> OLEANDRO </h2> - Camera doppia letto matrimoniale, terrazza, bagno privato con doccia, aria condizionata, TV, wifi
+			</p>
+		</div>
+
+		<div id="col-camere">
+			<img class="miniature"  src="immagini/bedroom2.jpg"> <img  class="miniature"  src="immagini/bathroom1.jpg">
+		</div>
+
+
+		<div id="col-camere">
+			<p>    <h2>ORTENSIA </h2> - Camera doppia con letti sigoli,balconcino, bagno privato con doccia, aria condizionata, TV, wifi </p>	
+		</div>
+
+			<div id="col-camere">
+			<img class="miniature"    src="immagini/bedroom3.jpg"> <img  class="miniature"  src="immagini/bathroom3.jpg">
+		</div>
+
 		
-		<h2 style="text-align: center;">Nina 7 Bed&amp;Breakfast</h2>
-		<h3 style="text-align: center;">Via Antonio Rosmini 7 | Treviso</h3>
-		<hr>
-	
-		<p class="social">
-		Seguici su <a href="www.facebook.com"> <img src="immagini/fb.png" width="30px" align="center"></a>
-		Condividi i tuoi ricordi su <a href="www.instagram.com"> <img src="immagini/instagram.png" width="30px" align="center"> </a>
-		</p>
-</footer>
-
-		<!--  FINE FOOTER --> 
 
 
+<!--  SOCIAL E  FOOTER --> 
+
+	<footer>
+
+	<hr>
+	<h2>Nina 7 Bed&amp;Breakfast</h2>
+	<h3>Via Antonio Rosmini 7 | Treviso</h3>
+	<hr>
+
+	<a href="http://www.facebook.com"> <img class="social-logo" src="immagini/fb.png" width="42"
+	alt="facebooklogo" ></a>  
+	<a href="http://www.instagram.com" > <img class="social-logo"   src="immagini/instagram.png"
+	width="44" alt="instagramlogo" ></a> 
+	</p>
 
 
+	</footer>
 
+<!--  FINE FOOTER --> 
 
 
 </body>
